`/auth/sso/providers` local platform api (#138)
